# LoopyMseDroid

./: .gitmodules  SETUP.md  SIGNING.md  build.gradle  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build-debug.yml  build-release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/loopymse/droid/emulator/: EmulatorActivity.kt  EmulatorBridge.kt  VirtualGamepadView.kt
app/src/main/java/com/loopymse/droid/ui/: BiosSetupActivity.kt  MainActivity.kt  RomAdapter.kt  RomEntry.kt  SettingsActivity.kt
app/src/main/java/com/loopymse/droid/util/: PreferencesManager.kt
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/LoopyMSE/input/: input.cpp  input.h
app/src/main/jni/LoopyMSE/sdl/: android_bridge_internal.h  config.h  imgwriter.cpp  imgwriter.h  main.cpp  options.cpp
app/src/main/jni/android/: android_bridge.cpp  ini_parser.cpp  ini_parser.h
app/src/main/res/drawable/: bg_file_picker.xml  bg_icon_button.xml  bg_rom_item.xml  bg_warning_banner.xml  ic_add.xml  ic_arrow_right.xml  ic_cartridge.xml  ic_launcher_foreground.xml  ic_play.xml  ic_search.xml  ic_settings.xml  ic_sort.xml
app/src/main/res/layout/: activity_bios_setup.xml  activity_emulator.xml  activity_main.xml  fragment_pause_menu.xml  item_rom.xml
app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: preferences_settings.xml
